# spec

./: MYPA_ALIGNMENT_GUIDE.md  RAGU_ALIGNMENT_GUIDE.md  README.md  TEZIT_MANIFESTO.md  TEZIT_PROTOCOL_SPEC.md  TEZIT_PROTOCOL_SPEC_v1.2.md  TEZ_CODE_REVIEW_PROFILE.md  TEZ_COORDINATION_PROFILE.md  TEZ_HTTP_API_SPEC.md  TEZ_INTERROGATION_PROTOCOL.md  TEZ_TIP_ENTERPRISE_ADDENDUM.md  TEZ_URI_SCHEME.md
.lane/: BRIEF.md  report.json
docs/security/: PROMPT_INJECTION_PREVENTION_2026.md  README.md  SECURITY_AUDIT_LOG.md
extensions/: CONTRIBUTING.md  README.md
extensions/proposed/tezit-mcp/reference-implementation/: Dockerfile  README.md  pyproject.toml
extensions/proposed/tezit-mcp/reference-implementation/tez/: __init__.py  __main__.py  bundle.py  cli.py  crypto.py  server.py  token_store.py
extensions/proposed/tezit-mcp/reference-implementation/tez/services/: local_storage.py  relay_client.py  sqlite_metadata.py
extensions/standard/: README.md
guides/: TEZ_FOR_CONSULTING.md  TEZ_FOR_FINANCE.md  TEZ_FOR_LEGAL.md
launch-partners/mypa/: CONFORMANCE_MATRIX.md  CONTRIBUTION_OFFER.md  INFRASTRUCTURE_UPDATE.md  PRODUCTION_LEARNINGS.md  PROTOCOL_PROPOSALS.md  README.md
launch-partners/ragu/: PRODUCTION_LEARNINGS.md  README.md
launch-partners/theaicoder/: FOLLOWUPS.md  (+3 more)
schemas/: README.md  code-review-finding.schema.json  code-review-surface.schema.json  conversation.schema.json  coordination-surface.schema.json  enterprise-tip-eval.schema.json  inline-tez.schema.json  manifest-portable.schema.json  manifest.schema.json  tip-query.schema.json  tip-response.schema.json
(+31 files in other folders)
